@@ -1,3 +1,5 @@
 Makefile
 Makefile.in
+u7bgintrinsics.data
+u7siintrinsics.data
 *~
