@@ -1,6 +1,6 @@
 ucxtdir = $(datadir)/exult
 
-ucxt_DATA = opcodes.txt \
+ucxt_DATA = \
 	u7opcodes.data	\
 	u7misc.data
 
@@ -9,5 +9,7 @@ EXTRA_DIST = \
 	flags.data	\
 	opcodes.txt	\
 	u7opcodes.data	\
-	u7misc.data
+	u7misc.data	\
+	u7bgintrinsics.data \
+	u7siintrinsics.data
 
